fix heart icon alignment

--- a/src/components/iconStyles.css
+++ b/src/components/iconStyles.css
@@ -1,8 +1,3 @@
 .vc-owner-crown-icon {
     color: var(--status-warning);
 }
-
-.vc-heart-icon {
-    margin-right: 0.5em;
-    translate: 0 2px;
-}
